[tool.poetry]
name = "delivery-fee-calculator-api"
version = "0.1.0"
description = "Delivery Fee Calculator"
authors = ["goldenglorys <olusolagloryolamide@gmail.com>"]
readme = "README.md"
packages = [{include = "delivery_fee_calculator_api"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.3"
psutil = "^5.9.8"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.1.0"
pytest-cov = "^4.1.0"
pytest = "^7.4.4"
httpx = "^0.26.0"

[tool.pytest.ini_options]
addopts = ["--cov", "--cov-report=xml", "-p no:warnings"]
norecursedirs = [".git", "venv", "env", "dist", "build", ".venv"]
python_files = ["test_*.py", "*_test.py", "tests.py"]
pythonpath = ["delivery-fee-calculator-api/app"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
